--- a/PetFeeder/app/src/main/AndroidManifest.xml
+++ b/PetFeeder/app/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
@@ -36,9 +40,6 @@
             android:name=".feed"
             android:exported="false" />
         <activity
-            android:name=".Bluetooth.Bluetooth"
-            android:exported="false" />
-        <activity
             android:name=".statistics"
             android:exported="false" />
         <activity
@@ -55,6 +56,9 @@
             android:exported="false" />
         <activity
             android:name=".EditPet"
+            android:exported="false" />
+        <activity
+            android:name=".ScanBluetooth"
             android:exported="false" />
         <activity
             android:name=".Components.Credits"
